--- a/phyiscs_network/readcsv.ipynb
+++ b/phyiscs_network/readcsv.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
        "[2000 rows x 324 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,18 +421,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = pd.concat([df.iloc[:,4:46],df.iloc[:,46:]],axis=1,ignore_index=True)\n",
-    "\n",
-    "y = df.iloc[:,45]"
+    "X = pd.concat([df.iloc[:,4:49],df.iloc[:,50:]],axis=1,ignore_index=True)\n",
+    "y = df.iloc[:,49]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,16 +441,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([2000, 320])"
+       "torch.Size([2000, 319])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +470,7 @@
        "torch.Size([2000, 1])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +504,7 @@
      "output_type": "stream",
      "text": [
       "PimaClassifier(\n",
-      "  (hidden1): Linear(in_features=320, out_features=160, bias=True)\n",
+      "  (hidden1): Linear(in_features=319, out_features=160, bias=True)\n",
       "  (act1): ReLU()\n",
       "  (hidden2): Linear(in_features=160, out_features=80, bias=True)\n",
       "  (act2): ReLU()\n",
@@ -519,7 +518,7 @@
     "class PimaClassifier(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.hidden1 = nn.Linear(320, 160)\n",
+    "        self.hidden1 = nn.Linear(319, 160)\n",
     "        self.act1 = nn.ReLU()\n",
     "        self.hidden2 = nn.Linear(160, 80)\n",
     "        self.act2 = nn.ReLU()\n",
@@ -538,25 +537,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-1.5550e-18],\n",
-       "        [-2.4689e-17],\n",
-       "        [-9.8585e-17],\n",
-       "        [-2.3664e-16],\n",
-       "        [-1.2744e-06],\n",
-       "        [-9.1876e-06],\n",
-       "        [-1.4657e-05],\n",
-       "        [-1.7064e-05],\n",
-       "        [ 3.7224e-03],\n",
-       "        [ 1.5565e-02]])"
+       "tensor([[0.1378],\n",
+       "        [0.1378],\n",
+       "        [0.1378],\n",
+       "        [0.1378],\n",
+       "        [0.1378],\n",
+       "        [0.1378],\n",
+       "        [0.1378],\n",
+       "        [0.1378],\n",
+       "        [0.1378],\n",
+       "        [0.1378]])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,113 +566,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished epoch 0, latest loss 7748.1298828125\n",
-      "Finished epoch 1, latest loss 0.41201943159103394\n",
-      "Finished epoch 2, latest loss 0.01066088117659092\n",
-      "Finished epoch 3, latest loss 1.9202991724014282\n",
-      "Finished epoch 4, latest loss 0.8531777262687683\n",
-      "Finished epoch 5, latest loss 0.6139273643493652\n",
-      "Finished epoch 6, latest loss 0.08486442267894745\n",
-      "Finished epoch 7, latest loss 0.48295658826828003\n",
-      "Finished epoch 8, latest loss 0.3270663321018219\n",
-      "Finished epoch 9, latest loss 0.34234756231307983\n",
-      "Finished epoch 10, latest loss 162.12570190429688\n",
-      "Finished epoch 11, latest loss 1344.9486083984375\n",
-      "Finished epoch 12, latest loss 39550.734375\n",
-      "Finished epoch 13, latest loss 8.149935722351074\n",
-      "Finished epoch 14, latest loss 0.4979695677757263\n",
-      "Finished epoch 15, latest loss 0.22413849830627441\n",
-      "Finished epoch 16, latest loss 16084699.0\n",
-      "Finished epoch 17, latest loss 47.94384765625\n",
-      "Finished epoch 18, latest loss 0.2372269332408905\n",
-      "Finished epoch 19, latest loss 176.19418334960938\n",
-      "Finished epoch 20, latest loss 50545.6171875\n",
-      "Finished epoch 21, latest loss 5.182731628417969\n",
-      "Finished epoch 22, latest loss 0.08488170802593231\n",
-      "Finished epoch 23, latest loss 4.1069512367248535\n",
-      "Finished epoch 24, latest loss 111.28282165527344\n",
-      "Finished epoch 25, latest loss 18.506349563598633\n",
-      "Finished epoch 26, latest loss 1.1167227029800415\n",
-      "Finished epoch 27, latest loss 17.886619567871094\n",
-      "Finished epoch 28, latest loss 0.03995002061128616\n",
-      "Finished epoch 29, latest loss 72.65180969238281\n",
-      "Finished epoch 30, latest loss 301.98760986328125\n",
-      "Finished epoch 31, latest loss 3.7985267639160156\n",
-      "Finished epoch 32, latest loss 0.1674949824810028\n",
-      "Finished epoch 33, latest loss 40.036338806152344\n",
-      "Finished epoch 34, latest loss 10190.5654296875\n",
-      "Finished epoch 35, latest loss 0.03267165645956993\n",
-      "Finished epoch 36, latest loss 15.304550170898438\n",
-      "Finished epoch 37, latest loss 3705.563232421875\n",
-      "Finished epoch 38, latest loss 5.8424763679504395\n",
-      "Finished epoch 39, latest loss 4.322818756103516\n",
-      "Finished epoch 40, latest loss 0.14450469613075256\n",
-      "Finished epoch 41, latest loss 0.0051935454830527306\n",
-      "Finished epoch 42, latest loss 7.555381774902344\n",
-      "Finished epoch 43, latest loss 2807629.25\n",
-      "Finished epoch 44, latest loss 2.2582595348358154\n",
-      "Finished epoch 45, latest loss 0.00799288135021925\n",
-      "Finished epoch 46, latest loss 0.02307409979403019\n",
-      "Finished epoch 47, latest loss 4.365592002868652\n",
-      "Finished epoch 48, latest loss 0.7412863373756409\n",
-      "Finished epoch 49, latest loss 53.08074188232422\n",
-      "Finished epoch 50, latest loss 1321.170166015625\n",
-      "Finished epoch 51, latest loss 0.04377727955579758\n",
-      "Finished epoch 52, latest loss 1.1389102935791016\n",
-      "Finished epoch 53, latest loss 0.11148928105831146\n",
-      "Finished epoch 54, latest loss 5.9367241859436035\n",
-      "Finished epoch 55, latest loss 287487.9375\n",
-      "Finished epoch 56, latest loss 0.029894601553678513\n",
-      "Finished epoch 57, latest loss 1.6571988453506492e-05\n",
-      "Finished epoch 58, latest loss 3.125593900680542\n",
-      "Finished epoch 59, latest loss 3.407857894897461\n",
-      "Finished epoch 60, latest loss 681.9928588867188\n",
-      "Finished epoch 61, latest loss 0.07087240368127823\n",
-      "Finished epoch 62, latest loss 0.4074166715145111\n",
-      "Finished epoch 63, latest loss 0.039181772619485855\n",
-      "Finished epoch 64, latest loss 0.03167293593287468\n",
-      "Finished epoch 65, latest loss 0.0009181210771203041\n",
-      "Finished epoch 66, latest loss 0.0006219317438080907\n",
-      "Finished epoch 67, latest loss 9.471586227416992\n",
-      "Finished epoch 68, latest loss 0.22399237751960754\n",
-      "Finished epoch 69, latest loss 0.12353049218654633\n",
-      "Finished epoch 70, latest loss 0.0351870134472847\n",
-      "Finished epoch 71, latest loss 0.017643408849835396\n",
-      "Finished epoch 72, latest loss 0.0505797453224659\n",
-      "Finished epoch 73, latest loss 0.038131263107061386\n",
-      "Finished epoch 74, latest loss 0.02869664505124092\n",
-      "Finished epoch 75, latest loss 0.03466472774744034\n",
-      "Finished epoch 76, latest loss 0.14287634193897247\n",
-      "Finished epoch 77, latest loss 3189.117919921875\n",
-      "Finished epoch 78, latest loss 0.09071218967437744\n",
-      "Finished epoch 79, latest loss 0.04773976653814316\n",
-      "Finished epoch 80, latest loss 0.35673609375953674\n",
-      "Finished epoch 81, latest loss 1651.519287109375\n",
-      "Finished epoch 82, latest loss 0.02621648833155632\n",
-      "Finished epoch 83, latest loss 0.21092841029167175\n",
-      "Finished epoch 84, latest loss 0.14287060499191284\n",
-      "Finished epoch 85, latest loss 1496.070068359375\n",
-      "Finished epoch 86, latest loss 0.00030257212347351015\n",
-      "Finished epoch 87, latest loss 0.2174806296825409\n",
-      "Finished epoch 88, latest loss 0.020474761724472046\n",
-      "Finished epoch 89, latest loss 0.08872053772211075\n",
-      "Finished epoch 90, latest loss 103563.6796875\n",
-      "Finished epoch 91, latest loss 0.006978273391723633\n",
-      "Finished epoch 92, latest loss 0.004838846158236265\n",
-      "Finished epoch 93, latest loss 0.1629842072725296\n",
-      "Finished epoch 94, latest loss 1.4229643056751229e-05\n",
-      "Finished epoch 95, latest loss 29.665302276611328\n",
-      "Finished epoch 96, latest loss 0.17577563226222992\n",
-      "Finished epoch 97, latest loss 0.0007642906275577843\n",
-      "Finished epoch 98, latest loss 0.013170468620955944\n",
-      "Finished epoch 99, latest loss 6265.71484375\n"
+      "Finished epoch 0, latest loss 479.880126953125\n",
+      "Finished epoch 1, latest loss 0.005811956245452166\n",
+      "Finished epoch 2, latest loss 0.0025438531301915646\n",
+      "Finished epoch 3, latest loss 0.01141343079507351\n",
+      "Finished epoch 4, latest loss 0.005811956245452166\n",
+      "Finished epoch 5, latest loss 0.017266834154725075\n",
+      "Finished epoch 6, latest loss 0.05030852556228638\n",
+      "Finished epoch 7, latest loss 0.007903389632701874\n",
+      "Finished epoch 8, latest loss 0.005697158165276051\n",
+      "Finished epoch 9, latest loss 0.0003894391702488065\n",
+      "Finished epoch 10, latest loss 0.0003894391702488065\n",
+      "Finished epoch 11, latest loss 0.001750651397742331\n",
+      "Finished epoch 12, latest loss 0.002164785284548998\n",
+      "Finished epoch 13, latest loss 76.31446838378906\n",
+      "Finished epoch 14, latest loss 34.80066680908203\n",
+      "Finished epoch 15, latest loss 2197117696.0\n",
+      "Finished epoch 16, latest loss 0.5990508794784546\n",
+      "Finished epoch 17, latest loss 0.020670093595981598\n",
+      "Finished epoch 18, latest loss 0.155831977725029\n",
+      "Finished epoch 19, latest loss 0.0269001517444849\n",
+      "Finished epoch 20, latest loss 27663492.0\n",
+      "Finished epoch 21, latest loss 239.8697509765625\n",
+      "Finished epoch 22, latest loss 0.008501455187797546\n",
+      "Finished epoch 23, latest loss 0.020442519336938858\n",
+      "Finished epoch 24, latest loss 0.04954717308282852\n",
+      "Finished epoch 25, latest loss 1.6127331256866455\n",
+      "Finished epoch 26, latest loss 0.015229815617203712\n",
+      "Finished epoch 27, latest loss 384.290283203125\n",
+      "Finished epoch 28, latest loss 99367056.0\n",
+      "Finished epoch 29, latest loss 54.58367919921875\n",
+      "Finished epoch 30, latest loss 0.08908616006374359\n",
+      "Finished epoch 31, latest loss 79.88511657714844\n",
+      "Finished epoch 32, latest loss 420192.9375\n",
+      "Finished epoch 33, latest loss 46.549842834472656\n",
+      "Finished epoch 34, latest loss 0.022236892953515053\n",
+      "Finished epoch 35, latest loss 0.05914830043911934\n",
+      "Finished epoch 36, latest loss 876960.5\n",
+      "Finished epoch 37, latest loss 1.6812717914581299\n",
+      "Finished epoch 38, latest loss 0.37102025747299194\n",
+      "Finished epoch 39, latest loss 0.00518513610586524\n",
+      "Finished epoch 40, latest loss 82068600.0\n",
+      "Finished epoch 41, latest loss 0.22235162556171417\n",
+      "Finished epoch 42, latest loss 0.1566345989704132\n",
+      "Finished epoch 43, latest loss 0.982608437538147\n",
+      "Finished epoch 44, latest loss 0.08945520967245102\n",
+      "Finished epoch 45, latest loss 6.172529220581055\n",
+      "Finished epoch 46, latest loss 2346856.5\n",
+      "Finished epoch 47, latest loss 0.09868190437555313\n",
+      "Finished epoch 48, latest loss 1.5588692426681519\n",
+      "Finished epoch 49, latest loss 0.7445526719093323\n",
+      "Finished epoch 50, latest loss 0.39657995104789734\n",
+      "Finished epoch 51, latest loss 2370382336.0\n",
+      "Finished epoch 52, latest loss 2.4566287994384766\n",
+      "Finished epoch 53, latest loss 0.2682384252548218\n",
+      "Finished epoch 54, latest loss 0.7848668098449707\n",
+      "Finished epoch 55, latest loss 5990843.0\n",
+      "Finished epoch 56, latest loss 0.004067399073392153\n",
+      "Finished epoch 57, latest loss 0.005059909541159868\n",
+      "Finished epoch 58, latest loss 99635408.0\n",
+      "Finished epoch 59, latest loss 0.02406858094036579\n",
+      "Finished epoch 60, latest loss 0.00695678498595953\n",
+      "Finished epoch 61, latest loss 0.09696406871080399\n",
+      "Finished epoch 62, latest loss 396395.1875\n",
+      "Finished epoch 63, latest loss 0.0019491065759211779\n",
+      "Finished epoch 64, latest loss 0.00660689314827323\n",
+      "Finished epoch 65, latest loss 0.22193893790245056\n",
+      "Finished epoch 66, latest loss 0.47153979539871216\n",
+      "Finished epoch 67, latest loss 0.002202614676207304\n",
+      "Finished epoch 68, latest loss 0.6239601373672485\n",
+      "Finished epoch 69, latest loss 210016.546875\n",
+      "Finished epoch 70, latest loss 0.04680376872420311\n",
+      "Finished epoch 71, latest loss 0.3608107268810272\n",
+      "Finished epoch 72, latest loss 0.21175749599933624\n",
+      "Finished epoch 73, latest loss 365419.4375\n",
+      "Finished epoch 74, latest loss 0.00018393658683635294\n",
+      "Finished epoch 75, latest loss 0.07936263829469681\n",
+      "Finished epoch 76, latest loss 0.25046390295028687\n",
+      "Finished epoch 77, latest loss 0.001551122753880918\n",
+      "Finished epoch 78, latest loss 13.071342468261719\n",
+      "Finished epoch 79, latest loss 0.05245863273739815\n",
+      "Finished epoch 80, latest loss 0.00019266102754045278\n",
+      "Finished epoch 81, latest loss 0.013329042121767998\n",
+      "Finished epoch 82, latest loss 0.0006442533922381699\n",
+      "Finished epoch 83, latest loss 0.0732734352350235\n",
+      "Finished epoch 84, latest loss 0.23332607746124268\n",
+      "Finished epoch 85, latest loss 233187.875\n",
+      "Finished epoch 86, latest loss 0.004734401125460863\n",
+      "Finished epoch 87, latest loss 0.00010973190364893526\n",
+      "Finished epoch 88, latest loss 0.007126542739570141\n",
+      "Finished epoch 89, latest loss 0.0029891973827034235\n",
+      "Finished epoch 90, latest loss 0.032856278121471405\n",
+      "Finished epoch 91, latest loss 8992.4033203125\n",
+      "Finished epoch 92, latest loss 0.011016658507287502\n",
+      "Finished epoch 93, latest loss 2.9851560611859895e-05\n",
+      "Finished epoch 94, latest loss 0.018027007579803467\n",
+      "Finished epoch 95, latest loss 0.06720911711454391\n",
+      "Finished epoch 96, latest loss 3614951424.0\n",
+      "Finished epoch 97, latest loss 0.1623736470937729\n",
+      "Finished epoch 98, latest loss 0.16235895454883575\n",
+      "Finished epoch 99, latest loss 0.16234220564365387\n"
      ]
     }
    ],
@@ -698,14 +697,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Score: 65.57 RMSE\n"
+      "Train Score: 0.37 RMSE\n"
      ]
     }
    ],
