--- a/phyiscs_network/approximate_a_function.ipynb
+++ b/phyiscs_network/approximate_a_function.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
        "[2000 rows x 324 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,17 +431,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = torch.tensor(X.values.astype(np.float32))\n",
+    "X = torch.tensor(X.values.astype(np.float32), requires_grad=True)\n",
     "y = torch.tensor(y, dtype=torch.float32).reshape(-1, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
        "torch.Size([2000, 319])"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "torch.Size([2000, 1])"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -546,133 +546,130 @@
        "tensor([[0.1378],\n",
        "        [0.1378],\n",
        "        [0.1378],\n",
-       "        [0.1378],\n",
-       "        [0.1378],\n",
-       "        [0.1378],\n",
-       "        [0.1378],\n",
-       "        [0.1378],\n",
-       "        [0.1378],\n",
-       "        [0.1378]])"
+       "        ...,\n",
+       "        [0.1987],\n",
+       "        [0.1987],\n",
+       "        [0.1987]])"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y[0:10]"
+    "y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished epoch 0, latest loss 479.880126953125\n",
-      "Finished epoch 1, latest loss 0.005811956245452166\n",
-      "Finished epoch 2, latest loss 0.0025438531301915646\n",
-      "Finished epoch 3, latest loss 0.01141343079507351\n",
-      "Finished epoch 4, latest loss 0.005811956245452166\n",
-      "Finished epoch 5, latest loss 0.017266834154725075\n",
-      "Finished epoch 6, latest loss 0.05030852556228638\n",
-      "Finished epoch 7, latest loss 0.007903389632701874\n",
-      "Finished epoch 8, latest loss 0.005697158165276051\n",
-      "Finished epoch 9, latest loss 0.0003894391702488065\n",
-      "Finished epoch 10, latest loss 0.0003894391702488065\n",
-      "Finished epoch 11, latest loss 0.001750651397742331\n",
-      "Finished epoch 12, latest loss 0.002164785284548998\n",
-      "Finished epoch 13, latest loss 76.31446838378906\n",
-      "Finished epoch 14, latest loss 34.80066680908203\n",
-      "Finished epoch 15, latest loss 2197117696.0\n",
-      "Finished epoch 16, latest loss 0.5990508794784546\n",
-      "Finished epoch 17, latest loss 0.020670093595981598\n",
-      "Finished epoch 18, latest loss 0.155831977725029\n",
-      "Finished epoch 19, latest loss 0.0269001517444849\n",
-      "Finished epoch 20, latest loss 27663492.0\n",
-      "Finished epoch 21, latest loss 239.8697509765625\n",
-      "Finished epoch 22, latest loss 0.008501455187797546\n",
-      "Finished epoch 23, latest loss 0.020442519336938858\n",
-      "Finished epoch 24, latest loss 0.04954717308282852\n",
-      "Finished epoch 25, latest loss 1.6127331256866455\n",
-      "Finished epoch 26, latest loss 0.015229815617203712\n",
-      "Finished epoch 27, latest loss 384.290283203125\n",
-      "Finished epoch 28, latest loss 99367056.0\n",
-      "Finished epoch 29, latest loss 54.58367919921875\n",
-      "Finished epoch 30, latest loss 0.08908616006374359\n",
-      "Finished epoch 31, latest loss 79.88511657714844\n",
-      "Finished epoch 32, latest loss 420192.9375\n",
-      "Finished epoch 33, latest loss 46.549842834472656\n",
-      "Finished epoch 34, latest loss 0.022236892953515053\n",
-      "Finished epoch 35, latest loss 0.05914830043911934\n",
-      "Finished epoch 36, latest loss 876960.5\n",
-      "Finished epoch 37, latest loss 1.6812717914581299\n",
-      "Finished epoch 38, latest loss 0.37102025747299194\n",
-      "Finished epoch 39, latest loss 0.00518513610586524\n",
-      "Finished epoch 40, latest loss 82068600.0\n",
-      "Finished epoch 41, latest loss 0.22235162556171417\n",
-      "Finished epoch 42, latest loss 0.1566345989704132\n",
-      "Finished epoch 43, latest loss 0.982608437538147\n",
-      "Finished epoch 44, latest loss 0.08945520967245102\n",
-      "Finished epoch 45, latest loss 6.172529220581055\n",
-      "Finished epoch 46, latest loss 2346856.5\n",
-      "Finished epoch 47, latest loss 0.09868190437555313\n",
-      "Finished epoch 48, latest loss 1.5588692426681519\n",
-      "Finished epoch 49, latest loss 0.7445526719093323\n",
-      "Finished epoch 50, latest loss 0.39657995104789734\n",
-      "Finished epoch 51, latest loss 2370382336.0\n",
-      "Finished epoch 52, latest loss 2.4566287994384766\n",
-      "Finished epoch 53, latest loss 0.2682384252548218\n",
-      "Finished epoch 54, latest loss 0.7848668098449707\n",
-      "Finished epoch 55, latest loss 5990843.0\n",
-      "Finished epoch 56, latest loss 0.004067399073392153\n",
-      "Finished epoch 57, latest loss 0.005059909541159868\n",
-      "Finished epoch 58, latest loss 99635408.0\n",
-      "Finished epoch 59, latest loss 0.02406858094036579\n",
-      "Finished epoch 60, latest loss 0.00695678498595953\n",
-      "Finished epoch 61, latest loss 0.09696406871080399\n",
-      "Finished epoch 62, latest loss 396395.1875\n",
-      "Finished epoch 63, latest loss 0.0019491065759211779\n",
-      "Finished epoch 64, latest loss 0.00660689314827323\n",
-      "Finished epoch 65, latest loss 0.22193893790245056\n",
-      "Finished epoch 66, latest loss 0.47153979539871216\n",
-      "Finished epoch 67, latest loss 0.002202614676207304\n",
-      "Finished epoch 68, latest loss 0.6239601373672485\n",
-      "Finished epoch 69, latest loss 210016.546875\n",
-      "Finished epoch 70, latest loss 0.04680376872420311\n",
-      "Finished epoch 71, latest loss 0.3608107268810272\n",
-      "Finished epoch 72, latest loss 0.21175749599933624\n",
-      "Finished epoch 73, latest loss 365419.4375\n",
-      "Finished epoch 74, latest loss 0.00018393658683635294\n",
-      "Finished epoch 75, latest loss 0.07936263829469681\n",
-      "Finished epoch 76, latest loss 0.25046390295028687\n",
-      "Finished epoch 77, latest loss 0.001551122753880918\n",
-      "Finished epoch 78, latest loss 13.071342468261719\n",
-      "Finished epoch 79, latest loss 0.05245863273739815\n",
-      "Finished epoch 80, latest loss 0.00019266102754045278\n",
-      "Finished epoch 81, latest loss 0.013329042121767998\n",
-      "Finished epoch 82, latest loss 0.0006442533922381699\n",
-      "Finished epoch 83, latest loss 0.0732734352350235\n",
-      "Finished epoch 84, latest loss 0.23332607746124268\n",
-      "Finished epoch 85, latest loss 233187.875\n",
-      "Finished epoch 86, latest loss 0.004734401125460863\n",
-      "Finished epoch 87, latest loss 0.00010973190364893526\n",
-      "Finished epoch 88, latest loss 0.007126542739570141\n",
-      "Finished epoch 89, latest loss 0.0029891973827034235\n",
-      "Finished epoch 90, latest loss 0.032856278121471405\n",
-      "Finished epoch 91, latest loss 8992.4033203125\n",
-      "Finished epoch 92, latest loss 0.011016658507287502\n",
-      "Finished epoch 93, latest loss 2.9851560611859895e-05\n",
-      "Finished epoch 94, latest loss 0.018027007579803467\n",
-      "Finished epoch 95, latest loss 0.06720911711454391\n",
-      "Finished epoch 96, latest loss 3614951424.0\n",
-      "Finished epoch 97, latest loss 0.1623736470937729\n",
-      "Finished epoch 98, latest loss 0.16235895454883575\n",
-      "Finished epoch 99, latest loss 0.16234220564365387\n"
+      "Finished epoch 0, latest loss 8020.09130859375\n",
+      "Finished epoch 1, latest loss 0.002468616934493184\n",
+      "Finished epoch 2, latest loss 0.016922561451792717\n",
+      "Finished epoch 3, latest loss 0.06257106363773346\n",
+      "Finished epoch 4, latest loss 0.014913161285221577\n",
+      "Finished epoch 5, latest loss 0.014913161285221577\n",
+      "Finished epoch 6, latest loss 0.1255146861076355\n",
+      "Finished epoch 7, latest loss 0.04002407565712929\n",
+      "Finished epoch 8, latest loss 0.07295076549053192\n",
+      "Finished epoch 9, latest loss 0.33813220262527466\n",
+      "Finished epoch 10, latest loss 0.031542859971523285\n",
+      "Finished epoch 11, latest loss 0.11246015876531601\n",
+      "Finished epoch 12, latest loss 2.6590938568115234\n",
+      "Finished epoch 13, latest loss 0.9333924055099487\n",
+      "Finished epoch 14, latest loss 11551.892578125\n",
+      "Finished epoch 15, latest loss 0.1252184957265854\n",
+      "Finished epoch 16, latest loss 3.6919007301330566\n",
+      "Finished epoch 17, latest loss 0.23499147593975067\n",
+      "Finished epoch 18, latest loss 0.03983744978904724\n",
+      "Finished epoch 19, latest loss 4783.08203125\n",
+      "Finished epoch 20, latest loss 0.0034597800113260746\n",
+      "Finished epoch 21, latest loss 0.0011171023361384869\n",
+      "Finished epoch 22, latest loss 0.0007045377278700471\n",
+      "Finished epoch 23, latest loss 0.014032388105988503\n",
+      "Finished epoch 24, latest loss 0.0013694907538592815\n",
+      "Finished epoch 25, latest loss 0.005761794745922089\n",
+      "Finished epoch 26, latest loss 0.05479491874575615\n",
+      "Finished epoch 27, latest loss 0.051396291702985764\n",
+      "Finished epoch 28, latest loss 0.0005454339552670717\n",
+      "Finished epoch 29, latest loss 0.0012103868648409843\n",
+      "Finished epoch 30, latest loss 4.408081531524658\n",
+      "Finished epoch 31, latest loss 0.0009596474701538682\n",
+      "Finished epoch 32, latest loss 0.08996692299842834\n",
+      "Finished epoch 33, latest loss 0.10946333408355713\n",
+      "Finished epoch 34, latest loss 0.00016907803365029395\n",
+      "Finished epoch 35, latest loss 19488312.0\n",
+      "Finished epoch 36, latest loss 12.883526802062988\n",
+      "Finished epoch 37, latest loss 7.232060432434082\n",
+      "Finished epoch 38, latest loss 0.1415831297636032\n",
+      "Finished epoch 39, latest loss 4168299008.0\n",
+      "Finished epoch 40, latest loss 0.5288110375404358\n",
+      "Finished epoch 41, latest loss 0.001178720616735518\n",
+      "Finished epoch 42, latest loss 0.0011988028418272734\n",
+      "Finished epoch 43, latest loss 0.001260393182747066\n",
+      "Finished epoch 44, latest loss 0.0013453164137899876\n",
+      "Finished epoch 45, latest loss 0.002075925935059786\n",
+      "Finished epoch 46, latest loss 0.0018094271654263139\n",
+      "Finished epoch 47, latest loss 0.0004308489733375609\n",
+      "Finished epoch 48, latest loss 5.8829587942454964e-05\n",
+      "Finished epoch 49, latest loss 1.5648931366740726e-05\n",
+      "Finished epoch 50, latest loss 0.0005109140765853226\n",
+      "Finished epoch 51, latest loss 0.0010477553587406874\n",
+      "Finished epoch 52, latest loss 0.001424318295903504\n",
+      "Finished epoch 53, latest loss 0.0016304496675729752\n",
+      "Finished epoch 54, latest loss 0.001991414465010166\n",
+      "Finished epoch 55, latest loss 0.001706471899524331\n",
+      "Finished epoch 56, latest loss 0.0006796947563998401\n",
+      "Finished epoch 57, latest loss 5.434716149466112e-05\n",
+      "Finished epoch 58, latest loss 3.7247700674925e-05\n",
+      "Finished epoch 59, latest loss 1.7508105543129204e-07\n",
+      "Finished epoch 60, latest loss 0.00016482397040817887\n",
+      "Finished epoch 61, latest loss 1.148137562267948e-05\n",
+      "Finished epoch 62, latest loss 1.5361462146756821e-06\n",
+      "Finished epoch 63, latest loss 0.00025820889277383685\n",
+      "Finished epoch 64, latest loss 0.00025820935843512416\n",
+      "Finished epoch 65, latest loss 0.00023675954435020685\n",
+      "Finished epoch 66, latest loss 0.00033217453164979815\n",
+      "Finished epoch 67, latest loss 0.0005113999941386282\n",
+      "Finished epoch 68, latest loss 0.00025346747133880854\n",
+      "Finished epoch 69, latest loss 0.0013159402878955007\n",
+      "Finished epoch 70, latest loss 0.0015380335971713066\n",
+      "Finished epoch 71, latest loss 0.0002396344643784687\n",
+      "Finished epoch 72, latest loss 0.00018820571131072938\n",
+      "Finished epoch 73, latest loss 3.038011163880583e-05\n",
+      "Finished epoch 74, latest loss 0.000565608381293714\n",
+      "Finished epoch 75, latest loss 6.943934067749069e-07\n",
+      "Finished epoch 76, latest loss 0.00010577256034594029\n",
+      "Finished epoch 77, latest loss 9.258905629394576e-05\n",
+      "Finished epoch 78, latest loss 0.001521972008049488\n",
+      "Finished epoch 79, latest loss 0.0010796551359817386\n",
+      "Finished epoch 80, latest loss 0.0001357085711788386\n",
+      "Finished epoch 81, latest loss 0.00021339862723834813\n",
+      "Finished epoch 82, latest loss 0.0006826195167377591\n",
+      "Finished epoch 83, latest loss 0.0030171722173690796\n",
+      "Finished epoch 84, latest loss 0.0003496131976135075\n",
+      "Finished epoch 85, latest loss 3.2758284760348033e-06\n",
+      "Finished epoch 86, latest loss 0.000515712657943368\n",
+      "Finished epoch 87, latest loss 0.004072508774697781\n",
+      "Finished epoch 88, latest loss 0.002129489555954933\n",
+      "Finished epoch 89, latest loss 0.00039900309639051557\n",
+      "Finished epoch 90, latest loss 0.0040726992301642895\n",
+      "Finished epoch 91, latest loss 6.0374361055437475e-05\n",
+      "Finished epoch 92, latest loss 0.0024559530429542065\n",
+      "Finished epoch 93, latest loss 3.2676700357114896e-05\n",
+      "Finished epoch 94, latest loss 0.009738428518176079\n",
+      "Finished epoch 95, latest loss 1120.5079345703125\n",
+      "Finished epoch 96, latest loss 0.001329439808614552\n",
+      "Finished epoch 97, latest loss 0.00037441551103256643\n",
+      "Finished epoch 98, latest loss 0.003709182608872652\n",
+      "Finished epoch 99, latest loss 0.14935220777988434\n"
      ]
     }
    ],
@@ -697,14 +694,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Score: 0.37 RMSE\n"
+      "Train Score: 0.46 RMSE\n"
      ]
     }
    ],
